--- a/client/src/components/dashboard/Manager/ViewBooking/ManagerBooking.css
+++ b/client/src/components/dashboard/Manager/ViewBooking/ManagerBooking.css
@@ -1,154 +1,110 @@
-@font-face {
- font-family: Montserrat;
-  src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap');
+
+.card {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
+	width: 100%;
 }
 
-@media screen and (max-width: 960px) {
-  .admin-view-bookings-content > ul {
-    font-size: 70px;
-    margin-top: -150px;
-  }
+.card:hover {
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-@media screen and (max-width: 768px) {
-  .admin-view-bookings-content ul> li {
-    font-size: 50px;
-    margin-top: -100px;
-  }
+.container {
+	padding: 2px 16px;
 }
 
-.admin-view-bookings-container {
-  display: flex;
-
-  grid-area: main;
-  
-  justify-content: center;
-  align-items: center;
-
-  overflow: auto;
-
-  background: #f0ebec;
+.view__orders {
+	display: flex;
+	flex-wrap: wrap;
 }
 
-.admin-view-bookings-content {
-  height: auto;
-  width: 95%;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  flex-direction: column;
-  flex-flow: column;
-
-  align-items: center;
-  justify-items: center;
-
-  padding: 30px;
-
-  border-radius: 8px;
-
-  background: #f0ebec;
-
+.item__name {
+	margin-left: 10px;
+	padding: 0px;
 }
 
-.admin-view-bookings-content h2
-{
-  border: 1px solid black;
-  font-weight: bold;
-  font-style: italic;
-  display: inline-flex;
-  padding: 15px;
-  width: 100%;
-  background: #aaaaaa;
-  justify-content: center;
-  justify-items: left;
-  
- 
+.recomendedVideo_video {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
 }
 
-.new-form-button
-{
-  color: red;
-  display: flex;
-  justify-items: left;
-
+.back__button {
+	float: right;
+	padding-top: 10px;
 }
 
-
-.admin-view-bookings-content h3 {
-  font-family: Montserrat;
-  font-style: italic;
-  font-size: 38px;
-  margin-bottom: 40px;
-  display: flex;
-  justify-content: left;
+.order_table {
+	padding: 5px;
 }
 
-.admin-view-bookings-content a {
-  text-decoration: none;
-  color: #000;
-  font-size: 24px;
-  font-weight: 500;
-  transition: opacity 0.2s;
+.order_table th {
+	background-color: rgb(32, 122, 9);
 }
 
-.admin-view-bookings-content a:hover {
-  opacity: 0.5;
+.order_table tr:hover {
+	background-color: #ddd;
+	opacity: 0.5;
+	opacity: 1;
+	transform-style: preserve-3d;
+	border-radius: 20px;
 }
 
-.admin-view-bookings-content svg {
-  margin-right: 10px;
+.mains-heading {
+	text-align: center;
+	font-weight: 900;
+	font-size: 50px;
 }
 
-
-.admin-view-bookings-content ul {
-  margin-top: 25px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 25px;
-  list-style:none;
-  flex-direction: column;
-  flex-flow: column;
-  margin-bottom: 25px;
-  align-items: center;
+.create_order_link {
+	padding-top: 10px;
+}
+.create_order_link:hover {
+	border-radius: 10px;
+	transform: skew(-10deg);
+	transform-style: preserve-3d;
+	font-size: 20px;
 }
 
-
-.admin-view-bookings-content ul li {
-  border: 3px solid black;
-  background: #ffffff;
-  padding: 24px;
-  border-radius: 8px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  flex-direction: column;
-  flex-flow: column;
-  align-items: center;
-  justify-items: start;
-  transition: opacity 0.4s;
+.card_items {
+	padding: 10px;
+	display: flex;
+	border-bottom: 1px solid grey;
+}
+.card_items p {
+	right: 16px;
 }
 
-.admin-view-bookings-content ul li:hover {
-  opacity: 0.7;
+.card_items b {
+	font-weight: 900;
+	font-size: 15px;
+	margin-right: 20px;
+	margin-left: 10px;
 }
 
-.admin-view-bookings-content ul li strong {
-  font-size: 16px;
-  margin: 7px;
+.card_items:hover {
+	cursor: pointer;
+	transform: skew(-10deg);
+	transform-style: preserve-3d;
 }
 
-.admin-view-bookings-content ul li p {
-  font-size: 17px;
+.card_items_subtotal {
+	display: flex;
+	margin-top: 10px;
 }
 
-.admin-view-bookings-content ul li button {
-  position: flex;
-  background: transparent;
-  max-width: 2px;
-  border: 0;
-  margin-top: 10px;
-  margin-left: 0px;
-  cursor: pointer;
+.card_items_subtotal b {
+	font-size: 18px;
+	padding: 5px;
+	margin-left: 30px;
 }
 
-.admin-view-bookings-content ul li button:hover {
-  opacity: 0.8;
+.card_items_subtotal p {
+	font-size: 15px;
+	padding: 5px;
+	margin-left: 5px;
+}
+
+.order_container {
+	padding: 35px;
 }
