--- a/client/src/components/dashboard/customer/booking/booking.css
+++ b/client/src/components/dashboard/customer/booking/booking.css
@@ -1,21 +1,34 @@
 .form-group {
-	flex-direction: column;
-	align-items: stretch;
+  flex-direction: column;
+  align-items: stretch;
 }
-.form-group input[type='text'] {
-	vertical-align: middle;
-	margin: 5px 10px 5px 0;
-	padding: 10px;
-	background-color: #fff;
-	border: 1px solid #ddd;
-	border-radius: 30px;
+.form-group input[type="text"] {
+  vertical-align: middle;
+  margin: 5px 10px 5px 0;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 30px;
+  
 }
 
-.form-group {
-	display: flex;
-	flex-flow: row wrap;
-	align-items: center;
+.form-group  {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
 }
 .container .row {
-	flex-direction: row;
+  flex-direction: row;
+}
+
+.booking__sloat__container {
+ margin: 30px;
+}
+
+.booking_form {
+  
+}
+
+.booking_form_details {
+  align-items: center;
 }
