--- a/client/src/components/dashboard/customer/Contact/Contact.css
+++ b/client/src/components/dashboard/customer/Contact/Contact.css
@@ -1,5 +1,6 @@
 .body {
 	font-family: 'Poppins', sans-serif;
+	color: black;
 }
 .contact-page-section {
 	position: relative;
@@ -44,7 +45,7 @@
 	padding-left: 70px;
 	font-size: 14px;
 	line-height: 24px;
-	color: #777777;
+	color: #111010;
 	font-weight: 400;
 	margin-bottom: 45px;
 }
@@ -54,7 +55,7 @@
 	top: 0;
 	font-size: 36px;
 	line-height: 1.4em;
-	color: #bbbbbb;
+	color: #2e2626;
 }
 .contact-page-section .contact-info li strong {
 	display: block;
@@ -65,7 +66,7 @@
 	margin-bottom: 5px;
 }
 .contact-page-section .contact-info li a {
-	color: #777777;
+	color: #241c1c;
 	display: inline-block;
 	-webkit-transition: all 300ms ease;
 	-moz-transition: all 300ms ease;
